[package]
name = "pdftotext"
version = "0.1.6"
authors = ["Elias Gabriel Amaral da Silva <tolkiendili@gmail.com>", "Riley Smith <riley@rileysmith.me>"]
edition = "2018"
license = "GPL-2.0 OR GPL-3.0"
readme = "README.md"
repository = "https://github.com/dlight/pdftotext"
homepage = "https://github.com/dlight/pdftotext"
documentation = "https://docs.rs/pdftotext"
description = """
High-level library that binds to Poppler to extract text from a PDF
"""
keywords = ["poppler", "pdf", "text"]
categories = ["api-bindings"]

[features]
default = []
static-poppler = ["cmake"]
static-poppler-wasm = ["cmake"]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
cmake = { version = "0.1", optional = true }
